# MotherInLaw

./: CMakeCache.txt  CMakeLists.txt  Makefile  imageclass.cpp  imageclass.h  imageclass_test.cpp  main.cpp  mathcalculate.cpp  mathcalculate.h
.github/workflows/: cmake.yml
